--- a/example-functions/templates/configmap.yaml
+++ b/example-functions/templates/configmap.yaml
@@ -4,8 +4,8 @@ metadata:
   name: {{ .Release.Name }}-config
   namespace: default
 data:
-  quote: {{quote .Values.city}}
-  upper: {{ upper .Values.city}}
-  now: {{ now }}
+  quote: {{quote .Values.city | upper}}
+  upper: {{ upper .Values.city | repeat 3}}
+  now: {{ now | htmlDate}}
   substr: {{ substr 0 3 .Values.city }}
-  network: {{ getHostByName "example.com" }}
+  network: {{ getHostByName "example.com" | substr 0 3}}
