--- a/example-subplantilla/templates/web_service.yaml
+++ b/example-subplantilla/templates/web_service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{.Release.Name}}-sonda-svc
-  {{- template "plantilla1.etiquetas"}}
+  {{- template "plantilla1.etiquetas" .}}
 spec:
   type: NodePort
   selector:
